[tool.poetry]
name = "deploy_dash_pythonanywhere"
version = "0.1.0"
description = ""
authors = ["marcusmariano <marcusney@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.6.2"
pandas = "^1.5.0"
dash-bootstrap-components = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
